tests/negative/typecheck/tuple_bad_index.orng
fn main () -> Int { 
    let mut x: (Int, Int) = (19, 58 - 19)
    let y = &mut x
    y^[2]
}
